--- a/main.html
+++ b/main.html
@@ -8,6 +8,67 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table class="Middle" id="table-1">
+	<caption>HTML Assignment 3</caption>
+		
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+			
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+			
+		</tr>
+<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+			
+		</tr>		
+	</table>
+
+	<table class="Middle" id="table-1">
+	<caption>HTML Assignment 3</caption>
+		
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+			
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+			
+		</tr>
+<tr>
+			<td id="t11"></td>
+			<td id="t12"></td>
+			<td id="t13"></td>
+			
+		</tr>		
+		<tr>
+			<td id="t11"></td>
+			<td id="t12"></td>
+			<td id="t13"></td>
+			
+		</tr>		<tr>
+			<td id="t11"></td>
+			<td id="t12"></td>
+			<td id="t13"></td>
+			
+		</tr>		<tr>
+			<td id="t11"></td>
+			<td id="t12"></td>
+			<td id="t13"></td>
+			
+		</tr>		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
